# LimiarControl

./: .dockerignore  .env.example  .env.lab.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.debug.yaml  docker-compose.lab.yml  docker-compose.prod.yml  docker-compose.yml  index.html  migration-checklist.md  openapi.snapshot.json  package-lock.json  package.json  pyrightconfig.json  tailwind.config.js  vite.config.ts
server_py/: .env.example  README.md  pyproject.toml  requirements.txt  test_register.py
server_py/alembic/: env.py
server_py/app/: main.py
server_py/app/api/: deprecation.py  (+2 more)
server_py/docs/: combat_spells_phase_3a.md
server_py/tests/: _combat_test_action_economy.py  _combat_test_effects.py  _combat_test_entity_stats.py  _combat_test_flow.py  _combat_test_npc_turns.py  _combat_test_shared.py  _combat_test_standard_actions.py  _combat_test_status.py  _combat_test_structured_actions.py  test_admin_system.py  test_base_item_admin.py  test_base_spell_admin.py  test_campaign_catalog_base_items.py  test_campaign_entity_statblock.py  test_campaign_name_uniqueness.py  test_campaign_party_deletion.py  test_character_progression.py  test_character_sheet_drafts.py  test_class_progression.py  test_combat.py  test_config_env_loading.py  test_dev_routes.py  test_healing_consumables.py  test_party_membership_realtime.py  test_party_name_uniqueness.py  test_race_config.py  test_roll_resolution.py  test_roll_resolution_endpoints.py  test_security.py  test_session_rest.py  test_session_state_finalize.py  test_session_state_merge.py  test_wild_shape.py
(+812 files in other folders)
